_includes/main.css
/* ... */
@media only screen and (max-width: 400px) {
  figcaption {
    font-size: 1.2rem;
  }
}
blockquote {
  padding-left: 15px;
  border-left: 3px solid #eee;
}
hr {
  border: none;
  height: 1px;
  margin: 40px auto;
  background: #eee;
  width: 100%;
}
figure.highlight {
  width: 100%;
  margin: 0;
}
.highlight .highlight {
  border: solid;
}

code,
tt {
  padding: 1px 3px;
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
  font-size: 13px;
  line-height: 20px;
  background: #fff;
  border: none;
  color: #cc0000
}
pre {
  border: none;
  margin: 0 0 1.75em 0;
  width: 100%;
  padding: 5px 10px;
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
  font-size: 1.2rem;
  line-height: 2rem;
  overflow: auto;
  background: #fff;
  box-sizing: border-box;
}
.wrapper-normal,
.wrapper-large {
  height: 100%;
  width: 96%;
  margin: 0 auto;
}
@media only screen and (max-width: 400px) {
  .wrapper-normal,
  .wrapper-large {
    width: 88%;
  }
}
@media only screen and (min-width: 400px) and (max-width: 1050px) {
  .wrapper-normal,
  .wrapper-large {
    width: 88%;
  }
}
.wrapper-normal {
  max-width: 560px;
}
.wrapper-large {
  max-width: 810px;
}
.text-center {
  text-align: center;
}
.clearfix:before,
.clearfix:after {
  content: "";
  display: table;
}
.clearfix:after {
  clear: both;
}
.animated {
  -webkit-animation: fade-in-down 0.6s;
          animation: fade-in-down 0.6s;
  -webkit-animation-delay: 0.3s;
          animation-delay: 0.3s;
}
@-webkit-keyframes fade-in-down {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-10px);
            transform: translateY(-10px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
}
@keyframes fade-in-down {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-10px);
            transform: translateY(-10px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
}
.home,
.blog, .write-ups,
.projects {
  margin-top: 75px;
}
.home > .list,
.blog > .list,
.write-ups > .list,
.projects > .list {
  border-top: 1px solid #ededed;
  margin-top: 30px;
  padding-top: 40px;
  position: relative;
}
.home > .list:before,
.blog > .list:before,
.write-ups > .list:before,
.projects > .list:before {
  display: block;
  content: " ";
  width: 7px;
  height: 7px;
  border: #ededed 1px solid;
  position: absolute;
  top: -5px;
  left: 50%;
  margin-left: -5px;
  background: #fff;
  box-shadow: #fff 0 0 0 5px;
  border-radius: 3px;
}
.home > .list > .item,
.blog > .list > .item,
.write-ups > .list > .item,
.projects > .list > .item {
  display: block;
  width: 95%;
  margin: 0 auto;
}
.home > .list > .item > .url,
.blog > .list > .item > .url,
.write-ups > .list > .item > .url,
.projects > .list > .item > .url {
  width: 100%;
  height: 100%;
  display: block;
  padding: 20px 0;
  text-decoration: none;
}
.home > .list > .item > .url > .title,
.blog > .list > .item > .url > .title,
.write-ups > .list > .item > .url > .title,
.projects > .list > .item > .url > .title {
  margin: 0;
  width: 75%;
  font-weight: 500;
  -webkit-transition: all ease-in-out 0.2s;
          transition: all ease-in-out 0.2s;
}
.home > .list > .item:hover > .url > .title,
.blog > .list > .item:hover > .url > .title,
.write-ups > .list > .item:hover > .url > .title,
.projects > .list > .item:hover > .url > .title {
  color: #3399ff;
}
.home > .list aside,
.blog > .list aside,
.write-ups > .list aside,
.projects > .list aside {
  position: relative;
  top: 2px;
  margin: 0;
  width: 35%;
  float: right;
  font-weight: 300;
  color: #aaa;
  text-align: right;
  -webkit-transition: all ease-in-out 0.2s;
          transition: all ease-in-out 0.2s;
}
.home > .list .item:hover .url aside,
.blog > .list .item:hover .url aside,
.write-ups > .list .item:hover .url aside,
.projects > .list .item:hover .url aside {
  color: #666;
}
.projects > .list > .item > .url > .title {
  display: inline;
}
.projects > .list > .item > .url > .emoji {
  display: inline;
  position: relative;
  top: -4px;
  margin-right: 10px;
}
.page {
  margin-top: 125px;
}
.page > h1 {
  text-align: center;
  margin-bottom: 6rem;
}
.about img {
  width: 50%;
  margin: 0 auto;
  display: block;
}
.post {
  margin-top: 125px;
}
.post > .title {
  text-align: center;
  margin-bottom: 3rem;
}
.post > .date,
.post > .post-tags {
  color: #666;
  font-weight: 300;
  font-size: 1.4rem;
  text-transform: uppercase;
  text-align: center;
  display: block;
  margin-bottom: 6rem;
  letter-spacing: 1px;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}
.post > .date {
  margin-bottom: 2rem;
}
.post > .post-tags > .item {
  font-weight: 400;
  padding: 3px 6px;
  border-radius: 3px;
  font-size: 1.1rem;
  background: #3399ff;
  color: #fff;
  letter-spacing: 1px;
  margin: 0 0.5rem;
  text-decoration: none;
}
.post > h2,
.post > h3,
.post > h4 {
  margin-top: 40px;
}
.post > h2 a,
.post > h3 a,
.post > h4 a {
  text-decoration: none;
}
.tags {
  margin-top: 125px;
}
.tags > .list {
  border-top: 1px solid #ededed;
  margin-top: 30px;
  padding-top: 40px;
  position: relative;
}
.tags > .list:before {
  display: block;
  content: " ";
  width: 7px;
  height: 7px;
  border: #ededed 1px solid;
  position: absolute;
  top: -5px;
  left: 50%;
  margin-left: -5px;
  background: #fff;
  box-shadow: #fff 0 0 0 5px;
  border-radius: 3px;
}
.tags > .list > .item {
  font-weight: 400;
  text-transform: uppercase;
  text-align: center;
  margin-bottom: 6rem;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  padding: 3px 6px;
  border-radius: 3px;
  font-size: 1.3rem;
  background: #3399ff;
  color: #fff;
  letter-spacing: 1px;
  margin: 0 0.5rem 1rem;
  text-decoration: none;
  display: inline-block;
}
.tag-list > .list {
  padding: 0;
}
.tag-list > .list > .item {
  display: block;
  width: 80%;
  margin: 0 10%;
}
/* ... */

